hpphoto.com (archived on 2007-12-29)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": false,
  "categories": "uncategorized",
  "char_count": 18308,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": true,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.14,
  "homepage_snapshot_redirected_domain": "snapfish.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20070717115020id_/http://www.snapfish.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20070720224944id_/http%3A//hpphoto.com",
  "interval": "2007_B",
  "link_text": "privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "snapfish.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071229091945id_/http%3A//www.snapfish.com/privacy",
  "policy_title": "Snapfish: Privacy Policy",
  "policy_url": "snapfish.com/privacy",
  "sha1": "dc75d2d8f8528711997ac474bd49ea11e0178cc2",
  "simhash": 18214510426367106269,
  "simhash_updated": true,
  "site_hostname": "hpphoto.com",
  "site_url": "http://hpphoto.com",
  "smog": 15.69,
  "strict_updated": true,
  "timestamp": "20071229091945",
  "word_count": 2958,
  "year": 2007
}

--- a/h/hp/hpp/hpphoto.com.html
+++ b/h/hp/hpp/hpphoto.com.html
@@ -1,10 +1,10 @@
-<!--The following is the downloaded HTML source of the hpphoto.com privacy policy that was archived on 2007-06-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070615130557id_/http%3A//www.snapfish.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hpphoto.com privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229091945id_/http%3A//www.snapfish.com/privacy) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head><link rel="stylesheet" type="text/css" href="http://images1.snapfish.com/MD5=d0c628477ec0936f5a8d3ca5c85d4897/default/styles/snapfish/snapfish_us/global.css">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head><link rel="stylesheet" type="text/css" href="https://images1.snapfish.com/MD5=40eb6628812542bdd044f41c4aa718fc/default/styles/snapfish/snapfish_us/global.css">
 <title>Snapfish: Privacy Policy</title>
 <script language="JAVASCRIPT">
-var __imageHost = 'http://images1.snapfish.com';
+var __imageHost = 'https://images1.snapfish.com';
 </script>
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -16,9 +16,9 @@ var __imageHost = 'http://images1.snapfish.com';
     window.cookiesuffix = ".snapfish_us.prd" ;
 </script>
 
-</head><body bgcolor="#3399cc" link="#0033cc" alink="#ffcc00" vlink="#3399cc" text="#000000" topmargin="0" leftmargin="0" marginheight="0" marginwidth="0"><span style="display:none"><script src="http://images1.snapfish.com/MD5=5e66e7423c9558f45ad349eda980a8c1/default/javascript/omniture/s_code.js"></script></span>
+</head><body bgcolor="#3399cc" link="#0033cc" alink="#ffcc00" vlink="#3399cc" text="#000000" topmargin="0" leftmargin="0" marginheight="0" marginwidth="0"><span style="display:none"><script src="https://images1.snapfish.com/MD5=5e66e7423c9558f45zz349eda980a8c1/default/javascript/omniture/s_code.js"></script></span>
 <script type="text/javascript">
-document.write('<SCRIPT LANGUAGE="javascript"  SRC="http://images1.snapfish.com/MD5=6ecfe6f365568b486b6b5482d9b645e8/default/javascript/util/common.js"><\/SCRIPT>');</script><script language="javascript" src="http://images1.snapfish.com/MD5=6ecfe6f365568b486b6b5482d9b645e8/default/javascript/util/common.js"></script>
+document.write('<SCRIPT LANGUAGE="javascript"  SRC="https://images1.snapfish.com/MD5=e91be8da8509c0f32fc699ef5571c90d/default/javascript/util/common.js"><\/SCRIPT>');</script><script language="javascript" src="https://images1.snapfish.com/MD5=e91be8da8509c0f32fc699ef5571c90d/default/javascript/util/common.js"></script>
 
 <style type="text/css">
    .navLink {
@@ -27,7 +27,7 @@ document.write('<SCRIPT LANGUAGE="javascript"  SRC="http://images1.snapfish.com/
 </style>
 
 
-<script language="javascript" src="http://images1.snapfish.com/MD5=b611eefa6130895664fdbc06274c7711/default/javascript/user.js"></script>
+<script language="javascript" src="https://images1.snapfish.com/MD5=59bdd39f246e3595c42a6efda472001e/default/javascript/user.js"></script>
 
 
 
@@ -44,7 +44,7 @@ s.currencyCode = "USD";
 s.pageNamePrefix = "US:en:" ;
 var pagePrefix = "US:en:" ;        
 
-s.server = "raa2";
+s.server = "r2-bl9-3";
 
     s.eVar14 = "no";
   
@@ -52,12 +52,15 @@ s.server = "raa2";
    
     s.prop6 = "no";
 
-  s.prop5 = "no";
+  s.prop5 = "yes";
+  s.eVar5 = "OTSC=SYE,OTSI=PASS";
 
   s.prop7 = "snapfish_us";
   s.eVar7 = "snapfish_us";
 
-  s.prop9 = "no";
+  s.prop9 = "yes";
+  s.prop12 = "Commissionjunction_special";
+  s.campaign = "Commissionjunction_special";
 
 s.prop10 = "snapfish";
 s.eVar11 = "FDR";
@@ -119,10 +122,10 @@ if(navigator.appVersion.indexOf('MSIE')>=0)document.write(unescape('%3C')+'\!-'+
 
 <!-- placeholder jsp for tracking pixels -->
 <map name="tabs">
-<area shape="rect" coords="5,0,88,21" href="http://www1.snapfish.com/home" alt=" home ">
-<area shape="rect" coords="90,0,170,21" href="http://www1.snapfish.com/photolibrary" alt=" photos ">
-<area shape="rect" coords="174,0,254,21" href="http://www1.snapfish.com/store" alt=" store ">
-<area shape="rect" coords="258,0,338,21" href="/school" alt=" tips &amp; tools ">
+<area shape="rect" coords="5,0,88,21" href="http://www.snapfish.com/home" alt=" home ">
+<area shape="rect" coords="90,0,170,21" href="http://www.snapfish.com/photolibrary" alt=" photos ">
+<area shape="rect" coords="174,0,254,21" href="http://www.snapfish.com/store" alt=" store ">
+<area shape="rect" coords="258,0,338,21" href="/school" alt=" tips &amp; ideas ">
 </map>
 <script type="text/javascript">
     function signOut()
@@ -131,7 +134,7 @@ if(navigator.appVersion.indexOf('MSIE')>=0)document.write(unescape('%3C')+'\!-'+
             closeAllWindows() ;
         }   //end of if
         
-          document.location.href = "http://www1.snapfish.com/logout" ;
+          document.location.href = "http://www.snapfish.com/logout" ;
         
     }   //end of signOut()
 
@@ -143,18 +146,18 @@ a.header:visited { text-decoration: none;}
 <!--begin header include-->
 <table width="100%" bgcolor="#66cc33" cellpadding="0" cellspacing="0" border="0">
 <tbody><tr>
-<td width="187" rowspan="2"><a href="http://www1.snapfish.com/welcome"><img src="http://images1.snapfish.com/MD5=1bdc527e32447862674db4bf6dcc953e/default/images/header/logo-green-hp.gif" width="214" height="58" border="0" alt=" snapfish by HP "></a></td>
-<td width="380"><img src="http://images1.snapfish.com/MD5=9a78eda31506b8207a9762f86a2ac5ca/default/images/header/logo-hp.gif" border="0" alt=" snapfish by HP "></td>
+<td width="187" rowspan="2"><a href="http://www.snapfish.com/welcome"><img src="https://images1.snapfish.com/MD5=1bdc527e32447862674db4bf6dcc953e/default/images/header/logo-green-hp.gif" width="214" height="58" border="0" alt=" snapfish by HP "></a></td>
+<td width="380"><img src="https://images1.snapfish.com/MD5=9a78eda31506b8207a9762f86a2ac5ca/default/images/header/logo-hp.gif" border="0" alt=" snapfish by HP "></td>
 <td align="right" rowspan="2">
   <table cellpadding="0" cellspacing="0" border="0">
    <tbody><tr>
      <td align="right"><font color="#ffffff">
-         <a href="http://www1.snapfish.com/registration"><font color="#ffffff"><b>sign up!</b></font></a>
+         <a href="http://www.snapfish.com/registration"><font color="#ffffff"><b>sign up!</b></font></a>
          &nbsp;|&nbsp;
-         <a href="http://www1.snapfish.com/login"><font color="#ffffff">log in</font></a></font></td>
+         <a href="http://www.snapfish.com/login"><font color="#ffffff">log in</font></a></font></td>
    </tr>
    <tr>
-     <td height="6"><img src="http://images1.snapfish.com/MD5=e626c9231ffd1854b3566cbe5d132dc6/default/images/spacer.gif" width="1" height="1" border="0" alt=""></td>
+     <td height="6"><img src="https://images1.snapfish.com/MD5=e626c9231ffd1854b3566cbe5d132dc6/default/images/spacer.gif" width="1" height="1" border="0" alt=""></td>
    </tr>
    <tr>
      <td align="right" nowrap="nowrap">
@@ -164,17 +167,17 @@ a.header:visited { text-decoration: none;}
 
              <font color="#ffffff">send us film</font></a>
      &nbsp;|&nbsp;
-<a href="http://www1.snapfish.com/howitworks"><font color="#ffffff">how snapfish works</font></a></font></td>
+<a href="http://www.snapfish.com/howitworks"><font color="#ffffff">how snapfish works</font></a></font></td>
    </tr>
    <tr>
      <td height="2"></td>
    </tr>
   </tbody></table>
 </td>
-<td width="17" align="right" rowspan="2"><img src="http://images1.snapfish.com/MD5=184d6812bcac7c9814fd759f830bc361/default/images/header/header-right.gif" width="17" height="58"></td>
+<td width="17" align="right" rowspan="2"><img src="https://images1.snapfish.com/MD5=184d6812bcac7c9814fd759f830bc361/default/images/header/header-right.gif" width="17" height="58"></td>
 </tr>
 <tr>
-  <td><img src="http://images1.snapfish.com/MD5=e626c9231ffd1854b3566cbe5d132dc6/default/images/spacer.gif" width="1" height="21" border="0" alt=""></td>
+  <td><img src="https://images1.snapfish.com/MD5=e626c9231ffd1854b3566cbe5d132dc6/default/images/spacer.gif" width="1" height="21" border="0" alt=""></td>
 </tr>
 </tbody></table>
 <!--end header include-->
@@ -195,17 +198,17 @@ a.header:visited { text-decoration: none;}
   <table width="440" cellpadding="0" cellspacing="0" border="0">
     <tbody><tr><td height="15"></td></tr>
     <tr>
-          <td><b>go to:&nbsp;</b><a href="http://www1.snapfish.com/helpindex" class="breadcrumb">help index</a> &gt; <a href="http://www1.snapfish.com/legal">legal information</a></td>
+          <td><b>go to:&nbsp;</b><a href="http://www.snapfish.com/helpindex" class="breadcrumb">help index</a> &gt; <a href="http://www.snapfish.com/legal">legal information</a></td>
     </tr>
     <tr><td height="15"></td></tr>
     <tr>
       <td>
       Snapfish takes your privacy very seriously. This Privacy Policy describes exactly how Snapfish uses identifiable information regarding our customers, such as name, address, email address or credit card number (<b>"Customer Information"</b>). Primarily, we collect such information for the purpose of providing you with an outstanding experience on the Snapfish Service. Except as <a href="#with-whom-share">specifically described</a> in this Privacy Policy, Snapfish does not sell, rent or share such Customer Information with third parties.
 <p>
-<a href="http://www.truste.org/ivalidate.php?url=www.snapfish.com&amp;sealid=101" target="new"><img src="http://images1.snapfish.com/MD5=6e680fd5ea898256b46bd06ff2fb12c3/default/images/truste-verify.gif" width="91" height="73" border="0" alt=" TRUSTe: Click to Verify " align="left" hspace="6" vspace="6"></a>
+<a href="http://www.truste.org/ivalidate.php?url=www.snapfish.com&amp;sealid=101" target="new"><img src="https://images1.snapfish.com/MD5=6e680fd5ea898256b46bd06ff2fb12c3/default/images/truste-verify.gif" width="91" height="73" border="0" alt=" TRUSTe: Click to Verify " align="left" hspace="6" vspace="6"></a>
 Snapfish is a member of TRUSTe. TRUSTe is an independent, non-profit initiative whose mission is to build users' trust and confidence in the Internet by promoting TRUSTe's principles of fair information practices. TRUSTe's certification covers the website's gathering and dissemination of information -- not any software, services or products. Because our company is completely committed to respecting and protecting your privacy, we have agreed to disclose our customer information practices and to have our privacy practices reviewed for compliance by TRUSTe.
 </p><p>
-If you have questions or concerns regarding this statement, you should first contact our Customer Service department at <a href="mailto:service@snapfish.com?subject=R03: My questions">service@snapfish.com</a>. If you do not receive acknowledgment of your inquiry or your inquiry has not been satisfactorily addressed, contact TRUSTe at <a href="http://truste.org/consumers/watchdog_complaint.php" target="new">http://truste.org/consumers/watchdog_complaint.php</a>. TRUSTe will then serve as a liaison with Snapfish to resolve your concerns. The TRUSTe program covers only information that is collected through this Web site, and does not cover information that may be collected through software downloaded from the site. This Privacy Policy is effective as of April 15th, 2005.
+If you have questions or concerns regarding this statement, you should first contact our Customer Support department at <a href="mailto:service@snapfish.com?subject=R03: My questions">service@snapfish.com</a>. If you do not receive acknowledgment of your inquiry or your inquiry has not been satisfactorily addressed, contact TRUSTe at <a href="http://truste.org/consumers/watchdog_complaint.php" target="new">http://truste.org/consumers/watchdog_complaint.php</a>. TRUSTe will then serve as a liaison with Snapfish to resolve your concerns. The TRUSTe program covers only information that is collected through this Web site, and does not cover information that may be collected through software downloaded from the site. This Privacy Policy is effective as of April 15th, 2005.
 </p><p>
 By using our Service, you consent to the collection and use of information in the manner described below. If we decide to change our privacy practice, we will post those changes on this page so that you are always aware of what information we collect, how we use it and under what circumstances we disclose it. Changes to our policy will be prospective only. Please check this page from time to time for changes to make sure you are aware of our latest privacy practices.
 </p><p>
@@ -332,11 +335,11 @@ San Francisco, CA 94107
 
 <!-------------------------------- end main area ------------------------------>
 
-  <img src="http://images1.snapfish.com/MD5=e626c9231ffd1854b3566cbe5d132dc6/default/images/spacer.gif" width="440" height="1" border="0" alt="">
+  <img src="https://images1.snapfish.com/MD5=e626c9231ffd1854b3566cbe5d132dc6/default/images/spacer.gif" width="440" height="1" border="0" alt="">
   </td>
   <td bgcolor="#FFFFFF" width="50">&nbsp;</td>
   <td bgcolor="#FFFFFF" width="120">
-  <!-- ad goes here --><img src="http://images1.snapfish.com/MD5=e626c9231ffd1854b3566cbe5d132dc6/default/images/spacer.gif" width="120" height="1" border="0" alt="">
+  <!-- ad goes here --><img src="https://images1.snapfish.com/MD5=e626c9231ffd1854b3566cbe5d132dc6/default/images/spacer.gif" width="120" height="1" border="0" alt="">
   </td>
   <td bgcolor="#FFFFFF" width="10">&nbsp;</td>
   <td bgcolor="#3399cc" width="6">&nbsp;</td>
@@ -360,19 +363,20 @@ A.greyFooterLink:visited, A.greyFooterLink:link, A.greyFooterLink:active {
 
         <table bgcolor="#FFFFFF" cellpadding="0" cellspacing="0" border="0" align="center">
         <tbody><tr>
-        <td><a href="http://www1.snapfish.com/aboutUs" class="greyFooterLink">about us</a> &nbsp;|&nbsp;
-            <a href="/photoshow" class="greyFooterLink">free photo software</a> &nbsp;|&nbsp;
+        <td><a href="http://www.snapfish.com/aboutUs" class="greyFooterLink">about us</a> &nbsp;|&nbsp;
+            <a href="/picturemover" class="greyFooterLink">free photo software</a> &nbsp;|&nbsp;
                     </td>
         <td width="10" rowspan="2">
-        <a href="/cameraphones"><img src="http://images1.snapfish.com/MD5=13cf1492c393b98dc768cd88fd794b93/default/images/mobile-icon-small.gif" width="7" height="13" border="0"></a>
+        <a href="/cameraphones"><img src="https://images1.snapfish.com/MD5=13cf1492c393b98dc768cd88fd794b93/default/images/mobile-icon-small.gif" width="7" height="13" border="0"></a>
         </td>
         <td>
         <a href="/cameraphones" class="greyFooterLink">mobile</a> &nbsp;|&nbsp;
-        <a href="http://www1.snapfish.com/termsAndConditions" class="greyFooterLink">t&amp;c's</a> &nbsp;|&nbsp;
-            <a href="http://www1.snapfish.com/privacy" class="greyFooterLink">privacy</a> &nbsp;|&nbsp;
-            <a href="http://www1.snapfish.com/helppricing" class="greyFooterLink">pricing</a> &nbsp;|&nbsp;
+        <a href="http://www.snapfish.com/termsAndConditions" class="greyFooterLink">t&amp;c's</a> &nbsp;|&nbsp;
+            <a href="http://www.snapfish.com/privacy" class="greyFooterLink">privacy</a> &nbsp;|&nbsp;
+            <a href="http://www.snapfish.com/store" class="greyFooterLink">our products</a> &nbsp;|&nbsp;
+            <a href="http://www.snapfish.com/helppricing" class="greyFooterLink">pricing</a> &nbsp;|&nbsp;
             <a href="/siteindex" class="greyFooterLink">site map</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-        <a href="http://www1.snapfish.com/helpindex" class="greyFooterLink">help</a></td>
+        <a href="http://www.snapfish.com/helpindex" class="greyFooterLink">help</a></td>
         </tr>
         <tr><td height="6"></td><td height="6"></td></tr>
         </tbody></table>
@@ -386,8 +390,8 @@ A.greyFooterLink:visited, A.greyFooterLink:link, A.greyFooterLink:active {
   <!-- footer -->
 <table width="100%" cellpadding="0" cellspacing="0" border="0">
       <tbody><tr>
-        <td bgcolor="#66cc33"><img src="http://images1.snapfish.com/MD5=3995b1df1453c4d89ea0d77e6215e01a/default/images/footer/footer-left.gif" width="15" height="35" border="0"></td>
-        <td bgcolor="#66cc33" align="right"><img src="http://images1.snapfish.com/MD5=0140f7cf277776e543c04f76a9923dac/default/images/footer/footer-right.gif" width="377" height="35" border="0"></td>
+        <td bgcolor="#66cc33"><img src="https://images1.snapfish.com/MD5=3995b1df1453c4d89ea0d77e6215e01a/default/images/footer/footer-left.gif" width="15" height="35" border="0"></td>
+        <td bgcolor="#66cc33" align="right"><img src="https://images1.snapfish.com/MD5=0140f7cf277776e543c04f76a9923dac/default/images/footer/footer-right.gif" width="377" height="35" border="0"></td>
         </tr>
     </tbody></table>
 <!-- end footer -->
