--- a/g/gl/glo/globalincidentmap.com.html
+++ b/g/gl/glo/globalincidentmap.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the globalincidentmap.com privacy policy that was archived on 2007-06-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070609141052id_/http%3A//www.globalincidentmap.com/privacypolicy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the globalincidentmap.com privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229093837id_/http%3A//www.globalincidentmap.com/privacypolicy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <meta http-equiv="Content-Type" content="text/html">
@@ -109,7 +109,13 @@ We collect aggregate information on what pages consumers access or visit, user-s
 <img src="http://s26.sitemeter.com/meter.asp?site=s26gim2478" alt="Site Meter" border="0"/></a>
 </noscript>
 <!-- Copyright (c)2006 Site Meter -->
-
+<!-- Analytics code -->
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-2026453-1";
+urchinTracker();
+</script>
 
 
 </center></body></html>
