--- a/f/fi/fin/finaldraft.com.html
+++ b/f/fi/fin/finaldraft.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the finaldraft.com privacy policy that was archived on 2007-06-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070613205347id_/http%3A//www.finaldraft.com/company/policies/online-privacy-policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the finaldraft.com privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229094014id_/http%3A//www.finaldraft.com/company/policies/online-privacy-policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><!-- InstanceBegin template="/Templates/withsidebar.dwt.php" codeOutsideHTMLIsLocked="false" --><head>
 <!-- InstanceBeginEditable name="doctitle" -->
@@ -12,8 +12,7 @@
 <!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
 </head>
 <body bgcolor="#FFFFFF" leftmargin="20" topmargin="0" marginwidth="20" marginheight="0">
-<a name="topofpage"></a>
-<!-- Your current IP Address is: 207.241.232.16 -->
+<!-- Your current IP Address is: 64.208.172.179 -->
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script><script type="text/javascript">_uacct = "UA-739341-1";urchinTracker();</script><script language="JavaScript" type="text/javascript" src="/_includes/scripts.js"></script><table width="780" border="0" align="center" cellpadding="0" cellspacing="0" background="/mm_layout/content-bgstripe-grey.gif">
   <tbody><tr align="left" valign="top"> 
     <td colspan="3" bgcolor="#FFFFFF"> 
@@ -28,7 +27,7 @@
 <form name="newsletter_signup" method="POST" action="http://www.finaldraft.com/company/newsletter.php">
 <table width="780" border="0" cellpadding="0" cellspacing="0">
   <tbody><tr> 
-    <td colspan="2"><img src="/mm_layout/spacer.gif" width="100%" height="5"></td>
+    <td colspan="2"><a name="topofpage"><img src="/mm_layout/spacer.gif" width="100%" height="5"></a></td>
   </tr>
   <tr> 
     <td width="154"><a href="http://www.finaldraft.com/"><img src="/mm_layout/fd_topleft_logo2.gif" width="154" height="52" border="0"></a></td>
@@ -204,9 +203,9 @@
     </td>
   </tr>
   <tr align="left" valign="top"> 
-    <td bgcolor="#FFFFFF"><img src="/mm_layout/spacer.gif" width="487" height="20"></td>
-    <td bgcolor="#FFFFFF"><img src="/mm_layout/spacer.gif" width="70" height="20"></td>
-    <td bgcolor="#FFFFFF"><img src="/mm_layout/spacer.gif" width="223" height="20"></td>
+    <td bgcolor="#FFFFFF"><img src="/mm_layout/spacer.gif" width="487" height="4"></td>
+    <td bgcolor="#FFFFFF"><img src="/mm_layout/spacer.gif" width="70" height="4"></td>
+    <td bgcolor="#FFFFFF"><img src="/mm_layout/spacer.gif" width="223" height="4"></td>
   </tr>
   <tr align="left" valign="top"> 
     <td><!-- InstanceBeginEditable name="content" --> 
