allconsuming.net (archived on 2007-12-29)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 9263,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.56,
  "homepage_snapshot_redirected_domain": "allconsuming.net",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20071001182807id_/http://www.allconsuming.net/",
  "homepage_snapshot_url": "https://web.archive.org/web/20071001182807id_/http%3A//allconsuming.net",
  "interval": "2007_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "allconsuming.net",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071229110410id_/http%3A//www.allconsuming.net/about/view/privacy",
  "policy_title": "All Consuming Privacy Policy on All Consuming",
  "policy_url": "allconsuming.net/about/view/privacy",
  "sha1": "5ad986f828b37bcda0b5e28cf7f574978a91e456",
  "simhash": 10750688538917178098,
  "simhash_updated": false,
  "site_hostname": "allconsuming.net",
  "site_url": "http://allconsuming.net",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20071229110410",
  "word_count": 1477,
  "year": 2007
}

--- a/a/al/all/allconsuming.net.html
+++ b/a/al/all/allconsuming.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the allconsuming.net privacy policy that was archived on 2006-12-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20061213115335id_/http%3A//allconsuming.net/about/view/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the allconsuming.net privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229110410id_/http%3A//www.allconsuming.net/about/view/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head>
 <title>All Consuming Privacy Policy on All Consuming</title>
@@ -212,7 +212,7 @@ Seattle, <span class="caps">WA 98122</span>-3034</p>
 <a href="/about/view/terms">Terms of Use</a> |
 <a href="/about/view/privacy">Privacy Policy</a> |
 <script type="text/javascript">eval(unescape('%64%6f%63%75%6d%65%6e%74%2e%77%72%69%74%65%28%27%3c%61%20%68%72%65%66%3d%22%6d%61%69%6c%74%6f%3a%72%6f%62%6f%74%63%6f%6f%70%40%67%6d%61%69%6c%2e%63%6f%6d%22%3e%53%65%6e%64%20%55%73%20%46%65%65%64%62%61%63%6b%3c%2f%61%3e%27%29%3b'))</script><a href="mailto:robotcoop@gmail.com">Send Us Feedback</a> |
-<a href="http://www.robotcoop.com">Robot Co-op Blog</a> | Copyright © 2004 - 2006 Robot Co-op
+<a href="http://www.robotcoop.com">Robot Co-op Blog</a> | Copyright © 2004 - 2007 Robot Co-op
 
 </p>
 </div><!-- End siteinf -->
