--- a/a/ar/art/articlecompilation.com.html
+++ b/a/ar/art/articlecompilation.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the articlecompilation.com privacy policy that was archived on 2007-06-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070613030417id_/http%3A//www.articlecompilation.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the articlecompilation.com privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229114122id_/http%3A//www.articlecompilation.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Language" content="en-us">
@@ -9,7 +9,7 @@
 <title>Article Directory | Submit Article | Article Compilation</title>
 <link rel="Stylesheet" href="http://www.articlecompilation.com/mainstyle.css" type="text/css" media="screen">
 </head><body>
-
+<script type="text/javascript" src="http://track2.mybloglog.com/js/jsserv.php?mblID=2007062603574353"></script>
 <div align="center">
 
 <table class="maintable" cellspacing="0" cellpadding="0" width="750">
@@ -22,7 +22,7 @@
 <tr>
 <form name="search" method="post" action="http://www.articlecompilation.com/indexser.php"></form>
 <td class="topnav" colspan="2">Search:
-<input type="text" name="search" value="" size="31" style="font-family: verdana; font-size: 11px; color: #333333; border: 1px solid #C0C0C0"></td>
+<input type="text" name="search" value="" size="28" style="font-family: verdana; font-size: 11px; color: #333333; border: 1px solid #C0C0C0"></td>
 
 </tr>
 
@@ -92,7 +92,7 @@ ArticleCompilation.com reserves the right to change this policy at any time. Ple
 </p>
 <p><b>
 Governing law</b><br>
-This policy and the use of this Site are governed by Indonesian law.<br>
+This policy and the use of this Site are governed by United States of America law.<br>
 This statement and the policies outlined herein are not intended to and do not create any contractual or other legal rights in or on behalf of any party.
 </p></td> <!-- End of Main Content -->
 <td class="navcell"> <!-- Starting of Navigator -->
@@ -104,8 +104,8 @@ google_ad_width = 160;
 google_ad_height = 90;
 google_ad_format = "160x90_0ads_al_s";
 google_ad_channel = "";
-google_color_border = "FFFFFF";
-google_color_bg = "FFFFFF";
+google_color_border = "F5F5F5";
+google_color_bg = "F5F5F5";
 google_color_link = "3300FF";
 google_color_text = "333333";
 google_color_url = "333333";
@@ -117,12 +117,13 @@ google_color_url = "333333";
 <div class="rightnavbox"><a href="http://www.articlecompilation.com/signup.php">Sign Up</a> for a free account or
 	<a href="http://www.articlecompilation.com/learnmore.php">learn more</a>.</div>
 <div class="spacer"></div>
-
 <div class="rightnavbox">
 <a href="http://www.articlecompilation.com">Home</a><br>
 <a href="http://www.articlecompilation.com/submitarticles.php">Submit Articles</a><br>
 <a href="http://www.articlecompilation.com/login.php">Member Login</a><br>
 <a href="http://www.articlecompilation.com/submitguidelines.php">Submission Guidelines</a><br>
+<a href="http://www.articlecompilation.com/topauthors.php">Top Authors</a><br>
+<a href="http://www.articlecompilation.com/populararticles.php">Most Popular Articles</a><br>
 <a href="http://www.articlecompilation.com/ezinenotify.php">Ezine Notifications</a><br>
 <a href="http://www.articlecompilation.com/rssfeed.php">Article RSS Feeds</a><br>
 
@@ -132,10 +133,35 @@ google_color_url = "333333";
 <div class="rightnavbox">
 <a href="http://www.articlecompilation.com/aboutus.php">About Us</a><br>
 <a href="http://www.articlecompilation.com/linkus.php">Link to Us</a><br>
-<a target="_blank" href="http://www.articlecompilation.com/linkshighway.php">Link Exchange</a><br>
 <a href="http://www.articlecompilation.com/contacts.php">Contact Us</a><br>
 <a href="http://www.articlecompilation.com/privacy.php">Privacy Policy</a><br>
 <a href="http://www.articlecompilation.com/terms.php">Terms of Service</a><br>
+</div>
+
+<div class="spacer"></div>
+<div class="rightnavbox">
+<left><b>Useful Resources</b><br>
+<a target="_blank" href="http://www.articlerow.com">Daily Interesting Articles</a><br>
+<a target="_blank" href="http://www.autosubmitarticle.com">Auto Blogging Script</a><br>
+<a target="_blank" href="http://www.computer-guide-center.com">Computer Guide Center</a><br>
+<a target="_blank" href="http://www.business-guide-center.com">Business Guide Center</a><br>
+<a target="_blank" href="http://www.travel-guide-center.com">Travel Guide Center</a><br>
+<a target="_blank" href="http://www.health-guide-center.com">Health Guide Center</a><br>
+<a target="_blank" href="http://www.finance-guide-center.com">Finance Guide Center</a><br>
+<a target="_blank" href="http://www.jobs-guide-center.com">Jobs Guide Center</a><br>
+<a target="_blank" href="http://www.student-loans-center.cn">Student Loans Center</a><br>
+<a target="_blank" href="http://www.home-loan-center.cn">Home Loan Center</a><br>
+<a target="_blank" href="http://www.payday-loans-center.cn">Payday Loans Center</a><br>
+<a target="_blank" href="http://www.kids-games-center.cn">Kids Games Center</a><br>
+<a target="_blank" href="http://www.toll-free-numbers.cn">Toll Free Numbers</a><br>
+<a target="_blank" href="http://www.auto-insurance-center.cn">Auto Insurance Center</a><br>
+<a target="_blank" href="http://www.health-insurance-center.cn">Health Insurance Center</a><br>
+<a target="_blank" href="http://www.labor-day-travel.cn">Labor day Travel</a><br>
+<a target="_blank" href="http://www.first-aid-kits.cn">First Aid Kits</a><br>
+<a target="_blank" href="http://www.dedicated-hosting-center.cn">Dedicated Hosting Center</a><br>
+<a target="_blank" href="http://www.exotic-lingerie.cn">Exotic Lingerie</a><br>
+<a target="_blank" href="http://www.scholarshipshunter.com">Scholarships Hunter</a><br>
+</left>
 </div>
 
 <div class="spacer"></div>
@@ -147,8 +173,8 @@ google_ad_height = 600;
 google_ad_format = "160x600_as";
 google_ad_type = "text_image";
 google_ad_channel = "";
-google_color_border = "FFFFFF";
-google_color_bg = "FFFFFF";
+google_color_border = "F5F5F5";
+google_color_bg = "F5F5F5";
 google_color_link = "3300FF";
 google_color_text = "333333";
 google_color_url = "333333";
@@ -163,7 +189,6 @@ google_color_url = "333333";
 </tbody></table>
 
 </div>
-
 
 
 
