--- a/2/2i/2in/2insure4less.com.html
+++ b/2/2i/2in/2insure4less.com.html
@@ -1,88 +1,137 @@
-<!--The following is the downloaded HTML source of the 2insure4less.com privacy policy that was archived on 2007-06-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070629012036id_/http%3A//www.2insure4less.com/about/PrivacyPolicy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the 2insure4less.com privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229120910id_/http%3A//www.2insure4less.com/about/privacy-policy.aspx) for the most accurate reproduction.-->
 
-<html><head>
-<title>2Insure4Less.com - Privacy Policy</title>
-<meta name="description" content="Privacy policy of 2insure4less.com">
-<meta name="keywords" content="privacy policy">
-<meta name="language" content="en">
-<meta name="robots" content="index, follow">
-<meta name="googlebot" content="index, follow">
-<meta name="revisit-after" content="3 days">
-<meta name="document-type" content="Public">
-<meta name="document-rating" content="Safe for Kids">
-<meta name="document-distribution" content="Global">
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<link href="../inc/styles.css" rel="stylesheet" type="text/css">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head id="Head1"><title>
+	2Insure4Less.com - Privacy Policy
+</title><link href="../sstyles.css" rel="stylesheet" type="text/css">
+
+    <script language="javascript" type="text/javascript" src="../scripts/jscript.js"></script>
+
 </head>
-<body bgcolor="#FFFFFF" marginwidth="0" marginheight="0" topmargin="0" leftmargin="0" bottommargin="0" link="#0000FF" vlink="#0000FF" alink="#0099FF">
+<body style="margin: 10px;">
+    <form name="form1" method="post" action="privacy-policy.aspx" id="form1">
+<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwUJODQ1NTQzNDg2ZGRsmbSHFVUaVfP4hHlhOm6VEcaIBA==">
 
-<table border="0" width="100%" height="100%" cellpadding="0" cellspacing="0"> 
- <tbody><tr> 
-  <td height="28" colspan="2" align="left" valign="top"><img src="../images/angle_top.gif" width="284" height="28"></td> 
- </tr> 
- <tr> 
-  <td rowspan="2" width="20" valign="bottom"><img src="../images/angle_left.gif" width="28" height="284"></td> 
-  <td valign="top"><table width="100%" border="0" cellpadding="0" cellspacing="0"> 
-    <tbody><tr> 
-     <td align="center" valign="top">
-
-	<table width="100%" border="0" cellpadding="0" cellspacing="0">
+        <div style="text-align: center;">
+            <table border="0" cellpadding="0" cellspacing="0" style="width: 100%; background-color: #FFFFFF;
+                border: 1px solid #8cbadb; text-align: left;">
+                <tbody><tr>
+                    <td style="padding-bottom: 10px; text-align: center;">
+                        <img src="../images/logo.jpg" alt="2Insure4Less.com - Help Box"></td>
+                </tr>
+                <tr>
+                    <td style="padding: 10px;">
+                        <h1>
+                            Privacy Policy</h1>
+                        <p>
+                            <span style="color: #006600">2</span><span style="color: #000066">Insure</span><span style="color: #006600">4</span><span style="color: #660000">Less</span><span style="color: #000066">.com</span>
+                            has created this Privacy Statement to demonstrate its firm commitment to privacy.
+                            The following discloses our information gathering and dissemination practices for
+                            the web site <span style="color: #006600">2</span><span style="color: #000066">Insure</span><span style="color: #006600">4</span><span style="color: #660000">Less</span><span style="color: #000066">.com</span>.
+                        </p>
+                        <p>
+                            <strong>SECURE SITE </strong>
+                            <br>
+                            Our site uses an online secure form for customer applications. When your order is
+                            placed through our secure online server, or you send us an email, we collect confidential
+                            customer information, our secure server software (SSL) encrypts all order information
+                            you input before it is sent to us. The encryption of the information you sent to
+                            us via email, or other form of electronic submission, does not guaranties its security,
+                            as encryption code can be broken, however all of the customer data we collect is
+                            protected against unauthorized access.
+                        </p>
+                        <p>
+                            <strong>PERSONALLY IDENTIFIABLE: CONSUMER INFORMATION</strong>, collected to process
+                            your order, might include contact information; name, mailing and garaging address,
+                            telephone number, fax number and/or email address; information relating to driving
+                            license, record and prior insurance history. Additionally, we collect information
+                            relating to all the additional insured’s names, age, marital status, credit
+                            rating, driving records, prior insurance, vehicle/s information, employment and
+                            education. All customers' information we collect is strictly confidential and maintained
+                            in electronic files in California head-office. Our participating insurance professionals,
+                            to whom this information is referred, are bound by the same terms of confidentiality
+                            and is used for rating purposes only for the insurance coverage/s requested and
+                            to contact the customers for purposes of completing and providing customers with
+                            the requested quotes.
+                        </p>
+                        <p>
+                            <strong>PROMOTIONS </strong>
+                            <br>
+                            To preserve customer’s anonymity and to assure the quality of customer communications,
+                            <span style="color: #006600">2</span><span style="color: #000066">Insure</span><span style="color: #006600">4</span><span style="color: #660000">Less</span><span style="color: #000066">.com</span>
+                            provides customers with the opportunity to opt in or out of any further marketing
+                            promotions or receiving communications from us, or our partners.</p>
+                        <p>
+                            <strong>DISCLOSURE TO OUTSIDE PARTIES </strong>
+                            <br>
+                            Aggregate statistics about our customers, sales, traffic patterns and related site
+                            information may be provided to reputable third parties, which will not contain personally
+                            identifying or financial information. <span style="color: #006600">2</span><span style="color: #000066">Insure</span><span style="color: #006600">4</span><span style="color: #660000">Less</span><span style="color: #000066">.com</span> may release account information when
+                            we believe, in good faith, that such release is reasonably necessary to comply with
+                            the law, enforce or apply the terms of any of our user agreements or protect the
+                            rights, property or safety of <span style="color: #006600">2</span><span style="color: #000066">Insure</span><span style="color: #006600">4</span><span style="color: #660000">Less</span><span style="color: #000066">.com</span>
+                            , our customers or others.
+                        </p>
+                        <p>
+                            <strong>COOKIES </strong>
+                            <br>
+                            We use outside companies to display ads on our site. These ads may contain pieces
+                            of information that a web site transfers to a hard drive for record keeping purposes
+                            while at the site.
+                        </p>
+                        <p>
+                            <strong>THIRD PARTY PRACTICES </strong>
+                            <br>
+                            The Privacy Policy of an advertiser or promotional service appearing at our site
+                            may differ from ours. We encourage you to read that policy before responding to
+                            that offer.
+                        </p>
+                        <p>
+                            <strong>CHILDREN UNDER 13 </strong>
+                            <br>
+                            We have no way of distinguishing the age of individuals who access our web site;
+                            however, in the event that we discover that a child under the age of 13 is providing
+                            personally-identifying information, we will not accept any such information. If
+                            a child had provided us with personally-identifying information without parental
+                            or guardian consent, the parent or guardian should contact us to remove that information
+                            and opt out of promotional opportunities.
+                        </p>
+                        <p>
+                            <strong>YOUR CONSENT </strong>
+                            <br>
+                            By using our site, you consent to the collection and use of this information by
+                            <span style="color: #006600">2</span><span style="color: #000066">Insure</span><span style="color: #006600">4</span><span style="color: #660000">Less</span><span style="color: #000066">.com</span>
+                            . If we decide to change our privacy policy, we will post those changes on this
+                            page so that you are always aware of what information we collect, how we use it
+                            and under what circumstances we may disclose it.
+                        </p>
+                        <p>
+                            Should you have any other questions about our Privacy Policy, please call us at
+                            (800) 647-2164.<br>
+                        </p>
+                    </td>
+                </tr>
+            </tbody></table>
+            
+<table cellpadding="0" cellspacing="0" border="0">
     <tbody><tr>
-     <td align="center" valign="top"><table width="90%" border="0" cellspacing="0" cellpadding="0">
-       <tbody><tr>
-        <td align="center" valign="middle" class="pageCaptionBig">Privacy Policy</td>
-       </tr>
-       <tr>
-        <td valign="bottom"><hr>
+        <td style="padding-top: 5px; text-align: center;">
+            <a href="contact-us.aspx" id="A_bottom1_botlink_contactus" target="_self" class="linkScreenBottom">
+                Contact Us</a><span class="linkScreenBottomSep">|</span><a href="about-us.aspx" id="A_bottom1_botlink_aboutus" target="_self" class="linkScreenBottom">About Us</a>
+            <span class="linkScreenBottomSep">|</span> <a href="terms-of-use.aspx" id="A_bottom1_botlink_terms" target="_self" class="linkScreenBottom">Terms of Use</a> <span class="linkScreenBottomSep">
+                    |</span> <a href="privacy-policy.aspx" id="A_bottom1_botlink_privacy" target="_self" class="linkScreenBottom">Privacy Policy</a> <span class="linkScreenBottomSep">|</span>
+            <a href="http://www.2insure4less.com/site-map.htm" target="_blank" class="linkScreenBottom">
+                Site Map</a>
         </td>
-       </tr>
-       <tr>
-        <td class="textNormal"><p align="left"><font color="#006600">2</font><font color="#000066">Insure</font><font color="#006600">4</font><font color="#660000">Less</font><font color="#000066">.com</font> has created this Privacy Statement to demonstrate its firm commitment to privacy. The following discloses our information gathering and dissemination practices for the web site <font color="#006600">2</font><font color="#000066">Insure</font><font color="#006600">4</font><font color="#660000">Less</font><font color="#000066">.com</font>. </p>
-         <p align="left"><br> <strong>SECURE SITE </strong><br> Our site uses an online secure form for customer applications. When your order is placed through our secure online server, or you send us an email, we collect confidential customer information, our secure server software (SSL) encrypts all order information you input before it is sent to us. The encryption of the information you sent to us via email, or other form of electronic submission, does not guaranties its security, as encryption code can be broken, however all of the customer data we collect is protected against unauthorized access. </p>
-         <p align="left"><strong><br> PERSONALLY IDENTIFIABLE: CONSUMER INFORMATION</strong>, collected to process your order, might include contact information; name, mailing and garaging address, telephone number, fax number and/or email address; information relating to driving license, record and prior insurance history. Additionally, we collect information relating to all the additional insured’s names, age, marital status, credit rating, driving records, prior insurance, vehicle/s information, employment and education. All customers' information we collect is strictly confidential and maintained in electronic files in California head-office. Our participating insurance professionals, to whom this information is referred, are bound by the same terms of confidentiality and is used for rating purposes only for the insurance coverage/s requested and to contact the customers for purposes of completing and providing customers with the requested quotes. </p>
-         <p align="left"><br> <strong>PROMOTIONS </strong><br> To preserve customer’s anonymity and to assure the quality of customer communications, <font color="#006600">2</font><font color="#000066">Insure</font><font color="#006600">4</font><font color="#660000">Less</font><font color="#000066">.com</font> provides customers with the opportunity to opt in or out of any further marketing promotions or receiving communications from us, or our partners.</p>
-         <p align="left"><br> <strong>DISCLOSURE TO OUTSIDE PARTIES </strong><br> Aggregate statistics about our customers, sales, traffic patterns and related site information may be provided to reputable third parties, which will not contain personally identifying or financial information. <font color="#006600">2</font><font color="#000066">Insure</font><font color="#006600">4</font><font color="#660000">Less</font><font color="#000066">.com</font> may release account information when we believe, in good faith, that such release is reasonably necessary to comply with the law, enforce or apply the terms of any of our user agreements or protect the rights, property or safety of <font color="#006600">2</font><font color="#000066">Insure</font><font color="#006600">4</font><font color="#660000">Less</font><font color="#000066">.com</font>, our customers or others. </p>
-         <p align="left"><br> <strong>COOKIES </strong><br> We use outside companies to display ads on our site. These ads may contain pieces of information that a web site transfers to a hard drive for record keeping purposes while at the site. </p>
-         <p align="left"><br> <strong>THIRD PARTY PRACTICES </strong><br> The Privacy Policy of an advertiser or promotional service appearing at our site may differ from ours. We encourage you to read that policy before responding to that offer. </p>
-         <p align="left"><br> <strong>CHILDREN UNDER 13 </strong><br> We have no way of distinguishing the age of individuals who access our web site; however, in the event that we discover that a child under the age of 13 is providing personally-identifying information, we will not accept any such information. If a child had provided us with personally-identifying information without parental or guardian consent, the parent or guardian should contact us to remove that information and opt out of promotional opportunities. </p>
-         <p align="left"><br> <strong>YOUR CONSENT </strong><br> By using our site, you consent to the collection and use of this information by <font color="#006600">2</font><font color="#000066">Insure</font><font color="#006600">4</font><font color="#660000">Less</font><font color="#000066">.com</font>. If we decide to change our privacy policy, we will post those changes on this page so that you are always aware of what information we collect, how we use it and under what circumstances we may disclose it. </p>
-         <p align="left">Should you have any other questions about our Privacy Policy, please call us at (800) 647-2164.<br> </p></td>
-       </tr>
-       <tr>
-        <td></td>
-       </tr>
-      </tbody></table></td>
     </tr>
-   </tbody></table>
+    <tr>
+        <td class="textScreenBottom" style="padding-top: 5px; text-align: center;">
+            © 2006 All rights reserved. <b>2Insure4Less.com</b></td>
+    </tr>
+</tbody></table>
 
-			</td> 
-    </tr> 
-   </tbody></table></td> 
- </tr> 
- <tr> 
-  <td colspan="2" valign="bottom"><table width="470" height="56" border="0" align="center" cellpadding="0" cellspacing="0" class="textNormal"> 
-    <tbody><tr> 
-     <td height="22" colspan="11"><hr></td>
-    </tr> 
-    <tr> 
-			<td align="center" nowrap="nowrap"><a href="ContactUs.asp" target="_self">Contact Us</a></td>
-<td width="20%" align="center"><font color="#666666">|</font></td>
-<td align="center" nowrap="nowrap"><a href="AboutUs.asp" target="_self">About Us</a></td>
-<td width="20%" align="center"><font color="#666666">|</font></td>
-<td align="center" nowrap="nowrap"><a href="HowItWorks.asp" target="_self">How It Works</a></td>
-<td width="20%" align="center"><font color="#666666">|</font></td>
-<td align="center" nowrap="nowrap"><a href="TermsAndConditions.asp" target="_self">Terms</a></td>
-<td width="20%" align="center"><font color="#666666">|</font></td>
-<td align="center" nowrap="nowrap">Privacy Policy</td>
-<td width="20%" align="center"><font color="#666666">|</font></td>
-<td align="center" nowrap="nowrap"><a href="http://www.2insure4less.com" target="_self">Free Insurance Quotes</a></td>
-
-    </tr> 
-   </tbody></table></td> 
- </tr> 
-</tbody></table> 
-
+        </div>
+    </form>
 
 
 </body></html>
