--- a/i/ip/ipo/ipost.com.html
+++ b/i/ip/ipo/ipost.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ipost.com privacy policy that was archived on 2007-05-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070522194442id_/http%3A//www.ipost.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ipost.com privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229122700id_/http%3A//www.ipost.com/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><!-- InstanceBegin template="/Templates/generaltemplate.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <!-- InstanceBeginEditable name="doctitle" -->
@@ -75,7 +75,7 @@ function MM_nbGroup(event, grpName) { //v6.0
 </head>
 
 <body onload="MM_preloadImages('images/navcont_n.gif','images/navlog_n.gif','images/navfea_r.gif','images/navsol_r.gif','images/navcli_r.gif','images/navcom_r.gif','images/navcom_n.gif')">
-<table width="717" border="0" cellspacing="0" cellpadding="0">
+<table align="center" width="717" border="0" cellspacing="0" cellpadding="0">
   <tbody><tr>
     <td width="20" valign="top"><img src="images/transparent.gif" width="10" height="1"></td>
     <td><table width="100%" border="0" cellspacing="0" cellpadding="0">
