--- a/b/ba/bar/barbri.com.html
+++ b/b/ba/bar/barbri.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the barbri.com privacy policy that was archived on 2007-06-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070623181008id_/http%3A//www.barbri.com/app.aspx%3Fcmd%3Dgo_PrivacyPolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the barbri.com privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229122705id_/http%3A//barbri.com/app.aspx%3Fcmd%3Dgo_PrivacyPolicy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
   		<title>Barbri Bar Review</title>
@@ -22,7 +22,7 @@
   </head>
 	<body ms_positioning="GridLayout">
 		<form name="Form1" method="post" action="MainPage.aspx?cmd=go_PrivacyPolicy" id="Form1">
-<input type="hidden" name="__VIEWSTATE" value="dDwxMjM2NDg5MzQ3OztsPF9jdGwxOmlidXRfRVNDX0NsaWNrSGVyZTtfY3RsNDpidXRHbzs+Pn/JMqoE/mxocW6HO4NoMKKyKX+o">
+<input type="hidden" name="__VIEWSTATE" value="dDwxMjM2NDg5MzQ3OztsPF9jdGwxOmlidXRfRVNDX0NsaWNrSGVyZTtfY3RsNDpidXRHbzs+PlAl4NISZNbPqzcfq22lxTmfcoMQ">
 
 			<table id="Table1" style="Z-INDEX: 101; LEFT: 1px; POSITION: absolute; TOP: 1px" height="100%" cellspacing="0" cellpadding="0" width="100%" border="0">
 				<tbody><tr>
@@ -245,8 +245,7 @@ function MM_swapImage() { //v3.0
 					<td style="PADDING-LEFT:10px;PADDING-TOP:10px" valign="top" height="1%">
 						<img src="WebControls/ExploreBarBri/Explore.gif" width="137" height="34" alt="" border="0"><br>
 						<img src="WebControls/ExploreBarBri/pxTrans.gif" width="1" height="10" alt="" border="0"><br clear="all">
-						<p><a href="app.aspx?cmd=go_bls" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('RightNav1','','WebControls/ExploreBarBri/beforeLS_btn_ON.gif',1)">	<img src="WebControls/ExploreBarBri/beforeLS_btn_OFF.gif" id="_ctl2_IMG1" alt="Before Law School" border="0" name="RightNav1"></a></p>
-						<p><a href="app.aspx?cmd=go_dls" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('RightNav2','','WebControls/ExploreBarBri/duringLS_btn_ON.gif',1)"><img src="WebControls/ExploreBarBri/duringLS_btn_OFF.gif" id="_ctl2_IMG2" alt="During Law School" border="0" name="RightNav2"></a></p>
+						<p><a href="app.aspx?cmd=go_dls" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('RightNav2','','WebControls/ExploreBarBri/duringLS_btn_ON.gif',1)">	<img src="WebControls/ExploreBarBri/duringLS_btn_OFF.gif" id="_ctl2_IMG2" alt="During Law School" border="0" name="RightNav2"></a></p>
 						<p><a href="app.aspx?cmd=go_als" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('RightNav3','','WebControls/ExploreBarBri/afterLS_btn_ON.gif',1)"><img src="WebControls/ExploreBarBri/afterLS_btn_OFF.gif" id="_ctl2_IMG3" alt="After Law School" border="0" name="RightNav3"></a></p>
 					</td>
 				</tr>				
