icbc.com (archived on 2007-12-29)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 3091,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "standard",
  "flesch_kincaid": 7.84,
  "homepage_snapshot_redirected_domain": "icbc.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20071002162355id_/http://www.icbc.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20071002162355id_/http%3A//icbc.com",
  "interval": "2007_B",
  "link_text": "Privacy Statement",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "icbc.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071229125545id_/http%3A//www.icbc.com/legal/privacy.asp",
  "policy_title": "ICBC.com - Privacy Statement",
  "policy_url": "icbc.com/legal/privacy.asp",
  "sha1": "6bfdcce4a974c27d7d313d4711f189bfeb5294e3",
  "simhash": 2162173512909005650,
  "simhash_updated": false,
  "site_hostname": "icbc.com",
  "site_url": "http://icbc.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20071229125545",
  "word_count": 495,
  "year": 2007
}

--- a/i/ic/icb/icbc.com.html
+++ b/i/ic/icb/icbc.com.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the icbc.com privacy policy that was archived on 2007-06-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070629154402id_/http%3A//www.icbc.com/legal/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the icbc.com privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229125545id_/http%3A//www.icbc.com/legal/privacy.asp) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 	<title>ICBC.com - Privacy Statement</title>
 	
 <meta name="language" content="en">
@@ -66,6 +66,7 @@
 			<li><a href="/inside_icbc/now_hiring.asp" title="Careers">Careers</a></li>
 		</ul>
 	</div>
+
 <div id="banner_container">
 <div id="banner">
 			<a href="../library/research_papers/cell_phones/index.asp"><img src="../images/tp_lg_cellphone_wt.jpg" alt=" "></a>
@@ -106,7 +107,7 @@
 
 			</li>
 			<li id="nav_buying_car">
-				<a href="/buy_car/" title="Buying A Car">Buying A Car</a>
+				<a href="/buy_car/" title="Buying &amp; Selling A Car">Buying &amp; Selling A Car</a>
 
 			</li>
 			<li id="nav_crime_fraud">
@@ -122,6 +123,7 @@
 
 			</li>
 		</ul>
+		
 		<div id="jscript_message" style="display: none;">
 <strong>JavaScript Is Not Enabled!</strong><br>
 Learn <a href="/help/tools.asp#js">how to enable JavaScript</a> in your browser.
@@ -136,7 +138,6 @@ if (document.getElementById) {
 </script><div class="primary_nav_banner"><h2>REPORT A CLAIM</h2>
 <a href="/claims-repairs/claims_howtom.asp">
 <span><img src="/images/report-a-claim.gif" height="22" width="117" alt="Report a claim">
-<span class="night"><strong>Online</strong></span> or by phone<br>
 <strong>Lower Mainland:</strong> <br> 604-520-8222<br>
 <strong>Rest of B.C.:</strong> <br> 1-800-910-4222
 </span>
