beforward.jp (archived on 2007-12-29)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "shopping;vehicles",
  "char_count": 8125,
  "classifier_probability": 0.94,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 16.5,
  "homepage_snapshot_redirected_domain": "beforward.jp",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20071011084903id_/http://beforward.jp/",
  "homepage_snapshot_url": "https://web.archive.org/web/20071011084903id_/http%3A//beforward.jp",
  "interval": "2007_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "beforward.jp",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071229142132id_/http%3A//www.beforward.jp/privacy_policy.php",
  "policy_title": "Japanese Used Car Exporter, Used Sports Cars, Drift Cars, Sedan, Coupe, Hatchback",
  "policy_url": "beforward.jp/privacy_policy.php",
  "sha1": "86b3551274547df6201db0e7f5fb33136846dc1b",
  "simhash": 11677693085030072294,
  "simhash_updated": false,
  "site_hostname": "beforward.jp",
  "site_url": "http://beforward.jp",
  "smog": 16.61,
  "strict_updated": false,
  "timestamp": "20071229142132",
  "word_count": 1244,
  "year": 2007
}

--- a/b/be/bef/beforward.jp.html
+++ b/b/be/bef/beforward.jp.html
@@ -1,11 +1,14 @@
-<!--The following is the downloaded HTML source of the beforward.jp privacy policy that was archived on 2007-02-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070213114137id_/http%3A//www.beforward.jp/privacy_policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the beforward.jp privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229142132id_/http%3A//www.beforward.jp/privacy_policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
-	<title>Japanese Used Car Exporter, Used Cars From Japan Auto Auctions</title>
+	<title>Japanese Used Car Exporter, Used Sports Cars, Drift Cars, Sedan, Coupe, Hatchback</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-	<meta name="description" content="">
-	<meta name="keywords" content="">
+	<meta name="description" content="Be Forward - Japanese used Sports Cars Exporter, Exporting makers like Mazda, Nissan, Toyota, Mitsubishi, Subar, Honda &amp; brands like SUPRA, RX-7, LANCER EVOLUTION, IMPREZA, SKYLINE, 180SX, SILVIA, CELICA ">
+	<meta name="keywords" content="Be Forward, brands, SUPRA, RX-7, LANCER EVOLUTION, IMPREZA, SKYLINE, 180SX, SILVIA, CELICA, Chofu, Tokyo, Japanese, Japan, bid, bidding, Exporter, Exporters, importers, importer, import, imports, dealers, dealer, auction, agent, sports, car, cars, exporting, auto, used, buyers, Purchase, Center, online, international, car, reconditioned, buyer, secondhand, salvage, vehicle, vehicles, distributor, Asia, SUV, MUV, Wagon, Van, distributors, specialized, worldwide, TAA, mitsubishi, toyota, IAUC, market prices, IATA, JAA, HAA, CAA, JU, NAA, Hiroshima, Niigata, Nakayama Nishi, mazda, Honda, commercial, stock, Stockist, Kansai, Okayama, TOKYO, Ishikawa, 
+Kawanishi, motor vehicle, nissan, subaru, daihatsu, suzuki, right hand drive, left hand drive, LHD, RHD, second hand, isuzu, DRIFT, D1, WRX KEIICHI TSUCHIYA, KEI, NISMO, YASHIO FACTORY, GALLERY, 
+WISE AQUARE, CUSCO, NKB, E-SR, MOON FACE, ALLES CREATE, AUTO PRODUCE BOSS, YAWATA, TRIAL, STRADALE, COCKPIT, MARUTA-GOYA, FORESIGHT, GARAGE MAK, GAREGE LFW, STEALTH, R.Y.O, LUCK, SUN LINE RACING, TOP SECRET, OUT TRASH, OK RACING, FRIENDS, INSIDE TCS, K2R, KAMIJOU, PURE, CHALLENGE, GOODS, VERTEX, VIPER, SIGNAL, BN SPORTS, TECHNICAL FACTORY D-FIDA, NEO, PROJECT, T.K-WORKS, BROS, ATS, DEFEND, URAS, GT-1, QUARTER MILE, TRUST, BLITZ, RUSTEM, JIC, KAKIGI, FUJITSUBO, GRANADOR, URAS, GREDDY, HRD, KAZAMA, IMPUL, SARD, TOMEI, SUZUKA, FUJI, TSUKUBA, MOTEGI, TI, JUN, TODA, APEX, LAP, SARD, BIOT, ZEAL, TURBO SR20, CA18, RB20, RB25, NOBUTERU TANIGUCHI, S14, S15, SSR, VOLK, TE37, PRODRIVE, WEDSSPORT, A-TECH, RACING, 5ZIGEN SPARCO, VARIOUS, ADVAN, AVS, HASEMI, ARISTO, CHASER, MARK, COROLLA, CORSA, CRESTA, ESTIMA, HARRIER, HIACE, HILUX
+IPSUM, LANDCRUISER, MR2, MR-S, PRIUS, RAV4, SPRINTER, STARLET, TOWNACE, VITZ, CIVIC, SUNNY, INTEGRA, CR-X, NSX, PAJERO, ACURA, S2000, ACCORD, ALTEZZA, LSD, WING, PARTS, BONNET, SUSPENSION, AFTER, MARKET, YAHOO, EBAY">
 	<link href="http://www.beforward.jp/css/sitecss.css" type="text/css" rel="stylesheet">
 	<script src="http://www.beforward.jp/js/js.js" type="text/javascript"></script>
 </head>
