--- a/m/ma/mai/maidenform.com.html
+++ b/m/ma/mai/maidenform.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the maidenform.com privacy policy that was archived on 2007-06-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070623004015id_/http%3A//www.maidenform.com/custserv/custserv.jsp%3FsectionId%3D26) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the maidenform.com privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229143646id_/http%3A//www.maidenform.com/custserv/custserv.jsp%3FsectionId%3D26) for the most accurate reproduction.-->
 
 <html><head>
 <title>Maidenform</title>
@@ -21,19 +21,10 @@ bra accessories,demi bra,one fabulous fit,one fab fit,bridal brasier,bra accesso
 
 
 
-<!--BEGIN ROI TRACKING Code-->
-<script language="javascript" src="http://track.roiservice.com/track/track.aspx?ROIID=933274107000017"></script>
-<script language="javascript">
-<!--
-	if (typeof(ROIID) + '' != 'undefined') {
-	
-	
-		TrackEvent('LandingPage', 0);
-	
-	}
-//-->
-</script>
-<!--END ROI TRACKING Code-->
+    
+    <script src="http://cts.channelintelligence.com/14261682_landing.js">
+    </script>
+    
 
 
 
@@ -97,7 +88,7 @@ preloadImages("images/global/top_nav/n_home2.gif","images/global/top_nav/n_what2
 	<td valign="top" width="537">
         <!-- Search Begins -->
 		<table border="0" cellspacing="0" cellpadding="0" width="537">
-		<form action="http://www.maidenform.com/catalog/search_command.cmd" method="post" name="searchForm"></form><input type="hidden" name="form_state" value="searchForm">
+		<form action="http://search.maidenform.com" method="get" name="searchForm"></form><input type="hidden" name="form_state" value="searchForm">
 		<tbody><tr>
 		</tr><tr>
 		<td valign="top" width="333"><img src="/assets/images/spacer.gif" width="333" height="1" border="0" alt=""></td>
@@ -467,6 +458,7 @@ preloadImages('images/shop/left_nav/ln_bra2.gif','images/shop/left_nav/ln_pants2
 <!-- Copyright (c) 1996-2007 WebTrends Inc.  All rights reserved. -->
 <!-- V8.0 -->
 <!-- $DateTime: 2007/01/15 $ -->
+<!-- To Use on search.maidenform.com $ -->
 <script type="text/javascript"><!--
 var gService = true;
 var gTimeZone = -5;
@@ -585,6 +577,10 @@ function dcsFPC(offset){
 // Code section for Use the new first-party cookie generated with this tag.
 var gFpc="WT_FPC";
 var gConvert=true;
+
+// Code section for Set the First-Party Cookie domain
+var gFpcDom=".maidenform.com";
+
 
 function dcsAdv(){
 	dcsFunc("dcsET");
